# CNEAT-Trader

./: .gitignore  README.md  TODO.txt
CNT/: main.cpp
CNT.xcodeproj/: project.pbxproj
CNT.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Cmake/: CMakeLists.txt
include/: CANN.hpp  CNEAT.hpp  ErrorLog.hpp  convertcsv.hpp
include/cereal/: access.hpp  cereal.hpp  macros.hpp
include/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
include/cereal/details/: helpers.hpp  polymorphic_impl.hpp  polymorphic_impl_fwd.hpp  (+2 more)
res/Best Genomes server1/: bestGen_1.genome  bestGen_116.genome  bestGen_1166.genome  bestGen_1207.genome  bestGen_129.genome  bestGen_25.genome  bestGen_26.genome  bestGen_27.genome  bestGen_3095.genome  bestGen_3135.genome  bestGen_33.genome  bestGen_360.genome  bestGen_3741.genome  bestGen_3747.genome  bestGen_3748.genome  bestGen_3749.genome  bestGen_3750.genome  bestGen_3756.genome  bestGen_397.genome  bestGen_404.genome  bestGen_44.genome  bestGen_49.genome  bestGen_572.genome  bestGen_59.genome  bestGen_64.genome  bestGen_65.genome  bestGen_67.genome  bestGen_70.genome  bestGen_75.genome  bestGen_77.genome  bestGen_91.genome  bestGen_96.genome
res/config/: EvalSettings.json  default_genome.json  default_mutation_rates.json  default_speciating_parameters.json
res/template/: template.genome  template_1.genome
src/: EvalFunctions.cpp  EvalFunctions.h  EvalFunctions.hpp  Main.cpp  OHLCVManager.hpp  ThreadSync.cpp  ThreadSync.hpp  TraderPool.cpp  TraderPool.hpp  cann.cpp  cann.h  cneat.cpp  cneat.h
(+106 files in other folders)
